adding file reading option

--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ table {
     display: none;
 }
 
+#forward {
+    display: none;
+}
+
+#backward {
+    display: none;
+}
+
 td,
 th {
     /* make text centered */
